# expense-tracker

./: .mcp.json  CLAUDE.md  FEATURES_ROADMAP.md  README.md  docker-compose.yml
backend/: .env.example  .env.storage.example  .gitignore  app.py  auth.py  currencies.py  currency_utils.py  models.py  pyproject.toml  requirements.txt  routes.py
backend/app/: _models.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: auth.py  budget.py  expenses.py  income.py  reports.py
backend/app/utils/: email.py  token.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 13c4517bd6a5_add_category_id_to_transactions.py  35509d80f7cb_add_original_currency_fields_to_.py  4d2ef3afc9d7_initial_migration.py  4effc64aa2c3_add_currency_fields_to_users_and_create_.py  5b14a07ab124_update_user_and_transaction_models.py  5c54f7a292db_add_user_id_to_transactions_and_create_.py  7a7c910c8808_update_user_model.py  7f5580e0288f_add_profile_picture_url_to_user_model.py  a1b2c3d4e5f6_add_exchange_rate_to_usd_to_transactions.py  b2c3d4e5f6g7_create_currency_conversions_table.py  fe0c89694888_update_user_model_for_google_auth.py
backend/routers/: auth_router.py  budgets.py  categories.py  currency.py  transactions.py  users.py
backend/scripts/: migrate_storage.py
backend/storage/: README.md  base.py  factory.py  local.py  s3.py
docs/: API_REFERENCE.md  DATABASE_SCHEMA.md  FEATURE_GUIDE.md  MEDIA_STORAGE_GUIDE.md  PROJECT_STRUCTURE.md  README.md
frontend/: .env  README.md  index.html  tailwind.config.ts  vite.config.ts
(+57 files in other folders)
